--- a/app/src/main/res/menu/main_menu.xml
+++ b/app/src/main/res/menu/main_menu.xml
@@ -2,12 +2,12 @@
 <menu xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto">
     <item
-        android:id="@+id/menu_main_search"
+        android:id="@+id/menuMainSearch"
         android:icon="@drawable/icon_search"
         android:title="@string/search"
         app:showAsAction="ifRoom" />
     <item
-        android:id="@+id/menu_main_popup"
+        android:id="@+id/menuMainPopup"
         android:icon="@drawable/icon_popup_menu"
         android:title="@string/menu"
         app:showAsAction="always" />
