--- a/app/src/main/res/layout/action_mode_title.xml
+++ b/app/src/main/res/layout/action_mode_title.xml
@@ -5,7 +5,7 @@
         android:layout_height="wrap_content">
 
         <com.google.android.material.checkbox.MaterialCheckBox
-            android:id="@+id/action_mode_select_all"
+            android:id="@+id/actionModeCheckBox"
             android:layout_width="@dimen/_20sdp"
             android:layout_height="@dimen/_20sdp"
             android:layout_gravity="center_vertical"
@@ -16,7 +16,7 @@
             android:scaleY="0.9" />
 
         <com.google.android.material.textview.MaterialTextView
-            android:id="@+id/action_mode_title"
+            android:id="@+id/actionModeTitle"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:layout_gravity="center_vertical"
