--- a/app/src/main/res/layout/activity_search.xml
+++ b/app/src/main/res/layout/activity_search.xml
@@ -15,12 +15,12 @@
             android:layout_height="wrap_content">
 
             <com.google.android.material.appbar.MaterialToolbar
-                android:id="@+id/search_toolbar"
+                android:id="@+id/searchToolbar"
                 android:layout_width="0dp"
                 android:layout_height="0dp" />
 
             <com.google.android.material.textfield.TextInputLayout
-                android:id="@+id/auto_complete_text_layout"
+                android:id="@+id/searchAutoCompleteLayout"
                 style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox.Dense.ExposedDropdownMenu"
                 android:layout_width="match_parent"
                 android:layout_height="match_parent"
@@ -31,7 +31,7 @@
                 app:startIconDrawable="@drawable/icon_search">
 
                 <com.google.android.material.textfield.MaterialAutoCompleteTextView
-                    android:id="@+id/auto_complete_text_view"
+                    android:id="@+id/searchAutoCompleteEditText"
                     android:layout_width="match_parent"
                     android:layout_height="@dimen/_36sdp"
                     android:background="@android:color/transparent"
@@ -44,7 +44,7 @@
         </com.google.android.material.appbar.AppBarLayout>
 
         <androidx.fragment.app.FragmentContainerView
-            android:id="@+id/search_host_fragment"
+            android:id="@+id/searchHostFragment"
             android:name="androidx.navigation.fragment.NavHostFragment"
             android:layout_width="match_parent"
             android:layout_height="match_parent"
