--- a/app/src/main/res/layout/item_list_recycler_list.xml
+++ b/app/src/main/res/layout/item_list_recycler_list.xml
@@ -15,7 +15,7 @@
         android:layout_height="wrap_content">
 
         <com.google.android.material.checkbox.MaterialCheckBox
-            android:id="@+id/list_check_box"
+            android:id="@+id/itemListListCheckBox"
             android:layout_width="@dimen/_20sdp"
             android:layout_height="@dimen/_20sdp"
             android:layout_gravity="center_vertical"
@@ -28,7 +28,7 @@
             android:scaleY="0.7" />
 
         <com.google.android.material.card.MaterialCardView
-            android:id="@+id/list_card_view"
+            android:id="@+id/itemListListCardView"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:layout_marginHorizontal="@dimen/_12sdp"
@@ -45,7 +45,7 @@
                     android:layout_height="@dimen/_36sdp">
 
                     <androidx.appcompat.widget.AppCompatImageView
-                        android:id="@+id/list_image"
+                        android:id="@+id/itemListListImage"
                         setUri="@{size.imageUri}"
                         android:layout_width="0dp"
                         android:layout_height="0dp"
@@ -57,7 +57,7 @@
                         app:layout_constraintTop_toTopOf="parent" />
 
                     <androidx.appcompat.widget.AppCompatImageView
-                        android:id="@+id/list_add_icon"
+                        android:id="@+id/itemListListAddIcon"
                         setAddIcon="@{size.imageUri}"
                         android:layout_width="0dp"
                         android:layout_height="0dp"
@@ -82,7 +82,7 @@
                     android:paddingHorizontal="@dimen/_4sdp">
 
                     <com.google.android.material.textview.MaterialTextView
-                        android:id="@+id/list_brand_text"
+                        android:id="@+id/itemListListBrandText"
                         android:layout_width="match_parent"
                         android:layout_height="wrap_content"
                         android:layout_marginBottom="@dimen/_2sdp"
@@ -94,7 +94,7 @@
                         tools:text="Anderson Bell" />
 
                     <com.google.android.material.textview.MaterialTextView
-                        android:id="@+id/list_name_text"
+                        android:id="@+id/itemListListNameText"
                         android:layout_width="match_parent"
                         android:layout_height="wrap_content"
                         android:alpha="0.8"
@@ -106,7 +106,7 @@
                 </androidx.appcompat.widget.LinearLayoutCompat>
 
                 <com.google.android.material.checkbox.MaterialCheckBox
-                    android:id="@+id/list_favorite_check_box"
+                    android:id="@+id/itemListListFavoriteCheckBox"
                     android:layout_width="@dimen/_20sdp"
                     android:layout_height="match_parent"
                     android:layout_gravity="bottom"
@@ -118,7 +118,7 @@
                     android:scaleY="0.7" />
 
                 <androidx.appcompat.widget.AppCompatImageView
-                    android:id="@+id/list_drag_handle"
+                    android:id="@+id/itemListListDragHandle"
                     setDragHandle="@{size.size}"
                     android:layout_width="wrap_content"
                     android:layout_height="match_parent"
