--- a/app/src/main/res/layout/item_search_recycler_view.xml
+++ b/app/src/main/res/layout/item_search_recycler_view.xml
@@ -10,7 +10,7 @@
 
         <androidx.recyclerview.widget.RecyclerView
             android:nestedScrollingEnabled="false"
-            android:id="@+id/search_recyclerView"
+            android:id="@+id/itemSearchRecyclerView"
             android:layout_width="match_parent"
             android:layout_height="match_parent"
             android:layout_marginTop="@dimen/_4sdp"
@@ -23,7 +23,7 @@
             tools:listitem="@layout/item_main_recycler_category" />
 
         <FrameLayout
-            android:id="@+id/no_data"
+            android:id="@+id/itemSearchNoData"
             android:layout_width="match_parent"
             android:layout_height="match_parent"
             android:layout_marginTop="@dimen/_4sdp"
