--- a/app/src/main/res/layout/item_tree_category.xml
+++ b/app/src/main/res/layout/item_tree_category.xml
@@ -21,13 +21,13 @@
             android:layout_height="wrap_content">
 
             <androidx.appcompat.widget.LinearLayoutCompat
-                android:id="@+id/icon_layout"
+                android:id="@+id/itemTreeCategoryFolderIconLayout"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 android:paddingVertical="@dimen/_8sdp">
 
                 <androidx.appcompat.widget.AppCompatImageView
-                    android:id="@+id/arrow_icon_category"
+                    android:id="@+id/itemTreeCategoryArrowIcon"
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
                     android:layout_marginStart="@dimen/_4sdp"
@@ -35,7 +35,7 @@
                     app:srcCompat="@drawable/icon_triangle_right" />
 
                 <androidx.appcompat.widget.AppCompatImageView
-                    android:id="@+id/folder_icon_category"
+                    android:id="@+id/itemTreeCategoryFolderIcon"
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
                     android:alpha="0.8"
@@ -43,7 +43,7 @@
             </androidx.appcompat.widget.LinearLayoutCompat>
 
             <com.google.android.material.textview.MaterialTextView
-                android:id="@+id/text"
+                android:id="@+id/itemTreeCategoryText"
                 android:layout_width="0dp"
                 android:layout_height="match_parent"
                 android:layout_marginStart="@dimen/_8sdp"
@@ -56,7 +56,7 @@
                 tools:text="Short Sleeve" />
 
             <com.google.android.material.textview.MaterialTextView
-                android:id="@+id/current_position"
+                android:id="@+id/itemTreeCategoryCurrentPositionText"
                 android:layout_width="wrap_content"
                 android:layout_height="match_parent"
                 android:alpha="0.5"
@@ -67,7 +67,7 @@
                 android:visibility="gone" />
 
             <com.google.android.material.textview.MaterialTextView
-                android:id="@+id/contents_size"
+                android:id="@+id/itemTreeCategoryContentsSizeText"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 android:layout_gravity="center"
@@ -78,11 +78,12 @@
                 tools:text="20" />
 
             <androidx.appcompat.widget.AppCompatImageView
-                android:id="@+id/add_icon"
+                android:id="@+id/itemTreeCategoryAddIcon"
                 setAddIcon2="@{category.categoryName}"
                 android:layout_width="wrap_content"
                 android:layout_height="match_parent"
                 android:alpha="0.8"
+                tools:src="@drawable/icon_add"
                 android:paddingStart="0dp"
                 android:paddingEnd="@dimen/_16sdp" />
         </androidx.appcompat.widget.LinearLayoutCompat>
