--- a/app/src/main/res/menu/action_mode.xml
+++ b/app/src/main/res/menu/action_mode.xml
@@ -2,17 +2,17 @@
 <menu xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto">
     <item
-        android:id="@+id/action_mode_edit"
+        android:id="@+id/menuActionModeEdit"
         android:icon="@drawable/icon_edit"
         android:title="@string/edit"
         app:showAsAction="always" />
     <item
-        android:id="@+id/action_mode_move"
+        android:id="@+id/menuActionModeMove"
         android:icon="@drawable/icon_move"
         android:title="@string/move"
         app:showAsAction="always" />
     <item
-        android:id="@+id/action_mode_del"
+        android:id="@+id/menuActionModeDelete"
         android:icon="@drawable/icon_delete"
         android:title="@string/delete"
         app:showAsAction="ifRoom" />
