--- a/app/src/main/res/values/themes.xml
+++ b/app/src/main/res/values/themes.xml
@@ -38,7 +38,7 @@
         <!--        recycler view background color-->
         <item name="recyclerBackground">@color/recycler_background</item>
         <!--        input output go button color-->
-        <item name="go_button_color">@color/go_button_color</item>
+        <item name="goButtonColor">@color/go_button_color</item>
         <!--        ripple color remove-->
         <item name="colorControlHighlight">@android:color/transparent</item>
         <!--        my color control-->
@@ -100,7 +100,7 @@
     </style>
 
     <attr name="recyclerBackground" format="color" />
-    <attr name="go_button_color" format="color" />
+    <attr name="goButtonColor" format="color" />
     <attr name="myColorControl" format="color" />
     <attr name="treeViewBackgroundColor" format="color" />
     <attr name="myCardViewBackground" format="color" />
